<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checker</string>
    <string name="action_settings">Settings</string>

    <string name="isbn_title">ISBN検索</string>
    <string name="isbn_button">検索</string>
    <string name="isbn_hint">978</string>

    <string name="title_alert">注意</string>
    <string name="network_notfound">このアプリケーションではインターネットへの接続が必須となります。</string>
    <string name="camera_notfound">この機能には背面カメラが必要となります。</string>

    <string name="appinfo_title">Credits</string>
    <string name="appinfo_message">The ZBar Bar Code Reader is Copyright © 2007-2011 Jeff Brown
		    		   &lt;spadix@users.sourceforge.net>\n
		    		   The QR Code reader is Copyright © 1999-2009 Timothy B. Terriberry
		    		   &lt;tterribe@xiph.org>\n\n
		    		   You can redistribute this library and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.\n\n
		    		   This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.\n\n
		    		   You should have received a copy of the GNU Lesser General Public License along with this library; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA\n\n
                       ISAAC is based on the public domain implementation by Robert J. Jenkins Jr., and is itself public domain.\n\n
		    		   Portions of the bit stream reader are copyright © The Xiph.Org Foundation 1994-2008, and are licensed under a BSD-style license.\n\n
		    		   The Reed-Solomon decoder is derived from an implementation © 1991-1995 Henry Minsky (hqm@ua.com, hqm@ai.mit.edu), and is licensed under the LGPL with permission.\n\n
		    		   </string>


               <string name="non_isbn">ISBN情報ではありません</string>
               <string name="retry_guide">2行あるバーコードの上にフォーカスしてください</string>

               <string name="isbn_error">ISBNエラー</string>
               <string name="isbn_msg">ISBNコードが間違っています。 </string>

               <string name="server_error">サーバーエラー</string>
               <string name="server_guide">書籍情報が取得できません。\nしばらくたってからお試しください。 </string>

               <string name="bookinfo_notfound">書籍情報が見つかりませんでした。 \nISBN: %1$s</string>

               <string name="query_result">検索結果</string>
               <string name="publisher_notfound">出版社情報が見つかりませんでした</string>

               <string name="confirm_dial">電話確認</string>
               <string name="dial_to">へ電話しますか？</string>

               <string name="ok">OK</string>
               <string name="cancel">キャンセル</string>

               <string name="bookinfo">書籍情報</string>
               <string name="publisherinfo">出版社情報</string>
               <string name="publishername">名前</string>
               <string name="publisheraddr">住所</string>
               <string name="publishertel">電話番号</string>
               <string name="bookcounter">冊数カウント</string>
               <string name="unknownbook">不明</string>
               <string name="bookcounterunit">冊分</string>

               <string name="btn_reader">書籍バーコードカメラ検索ボタン</string>
               <string name="btn_isbn">ISBN入力検索ボタン</string>
               <string name="btn_appinfo">アプリケーション情報ボタン</string>
               <string name="img_bookinfo">検索された書籍の表紙画像</string>

               <string name="msgtxt_guidemain0">2本あるうちの上のバーコードを</string>
               <string name="msgtxt_guidemain1">下の枠内に合わせてください。</string>
               <string name="msgtxt_guidesub0">バーコードは自動的にスキャンされます。</string>
               <string name="msgtxt_guidesub1">影や光が映り込まないようにしてください。 </string>

    <string name="actionbar_color">#32bd68</string>

    <string name="action_info">action open</string>

    <string name="isbn_num1">ISBN978-1-23456-789-1</string>
    <string name="isbn_num2">C1234 ￥1234E</string>
    <string name="isbn_str1">本の裏の<font fgcolor="#ff00ff00">ISBNの番号</font>を下記の枠内に</string>
    <string name="isbn_str1_1">本の裏の</string>
    <string name="isbn_str1_2">ISBNの番号</string>
    <string name="isbn_str1_3">を下記の枠内に</string>
    <string name="isbn_str2">入力してください。</string>
    <string name="button_search">検索</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="enter">Enter</string>
    <string name="title_activity_isbntab">ISBNTabActivity</string>

    <string name="tab_isbntab13">ISBN13桁</string>
    <string name="tab_isbntab10">ISBN10桁</string>
    <string name="title_activity_isbn10">IsbnActivity10</string>
    <string name="isbn_str">本の裏に記載されている10桁の ISBN を下記の枠内に入力してください。</string>

</resources>
