<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textLabel"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn_str"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:text="@string/isbn_str2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="right">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">


            <TextView
                android:visibility="gone"
                android:text="@string/isbn_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="36sp"
                android:gravity="right"
                android:background="@drawable/back">
            </TextView>
            <TextView
                android:visibility="gone"
                android:text="@string/isbn_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="36sp"
                android:gravity="right">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:color="#ffffff">
                <TextView
                    android:text="@string/isbn_str1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="24sp"
                    android:gravity="right">
                </TextView>
                <TextView
                    android:text="@string/isbn_str1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="24sp"
                    android:textColor="#ff0000"
                    android:gravity="right">
                </TextView>
                <TextView
                    android:text="@string/isbn_str1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:gravity="right">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#444444"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/isbn_edittext"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundshape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:scrollHorizontally="true"
            android:inputType="textAutoComplete"
            android:gravity="fill_horizontal"
            android:drawableRight="@drawable/mushi"
            android:textSize="30sp"
            android:maxLength="10"
            android:textColor="#000000"
            />
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button"
            android:onClick="buttonclick"
            />
    </LinearLayout>

</LinearLayout>